--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
     -->
     <title>React App</title>
   </head>
-  <body style="margin: 0px;">
+  <body class="bg-light">
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
