--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
@@ -19,6 +20,11 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <script type="jquery/jquery-3.3.1.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="bootstrap4.0.0-beta.3/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="bootstrap4.0.0-beta.3/css/bootstrap-reboot.min.css">
+    <script type="bootstrap4.0.0-beta.3/js/bootstrap.bundle.min.js"></script>
+    <script type="bootstrap4.0.0-beta.3/js/bootstrap.min.js"></script>
     <title>React App</title>
   </head>
   <body class="bg-light">
