--- a/public/index.html
+++ b/public/index.html
@@ -21,14 +21,9 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <script type="/jquery/jquery-3.3.1.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="/bootstrap4.0.0-beta.3/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="/bootstrap4.0.0-beta.3/css/bootstrap-reboot.min.css">
-    <link rel="stylesheet" type="text/css" href="/bootstrap4.0.0-beta.3/css/bootstrap-grid.min.css">
-    <script type="/bootstrap4.0.0-beta.3/js/bootstrap.bundle.min.js"></script>
-    <script type="/bootstrap4.0.0-beta.3/js/bootstrap.min.js"></script>
     <title>React App</title>
   </head>
-  <body class="bg-light">
+  <body class="grey lighten-5">
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
